--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,6 +17,9 @@
     <img src="https://www.rakhat.kz/app/themes/rahkat/assets/images/logo.png" alt="">
     </a>
   </div>
+  <div class="slogan">Life is tastier with us!</div>
+  <div class="subslogan">since 1942</div>
+
 </div>
 
 <div class="menubars">
