--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -7,6 +7,19 @@
 
 
 <!--</div>-->
+<div class="container">
+<div class="main-catalog">
+  <div class="main-catalog-description">
+    <div class="img-container rounded">
+      <img src="http://www.rakhat.kz/app/uploads/cache/2017/06/collage_catalog-1280x300-c-default.jpg" alt="">
+    </div>
+    <div class="desc">
+      <h1 class="titlecat">Ассортимент Рахат</h1>
+      <p></p>
+    </div>
+  </div>
+</div>
+
 <div style="margin-bottom: 35%; padding:20px">
 
 <div *ngFor="let i of products" class="col-sm-6 col-md-4">
@@ -20,6 +33,7 @@
 
 </div>
 
+</div>
 <!--<tr *ngFor="let i of products">-->
 <!--  <td>{{i.id}}</td>-->
 <!--  <td>{{i.Name}}</td>-->
