--- a/src/app/products/products.component.scss
+++ b/src/app/products/products.component.scss
@@ -66,3 +66,67 @@
   text-shadow: 0 0 1px #fff, 0 0 1px #fff, 0 0 2px #fff, 0 0 2px #fff;
   transform: translate3d(0, 0, 0);
 }
+
+
+
+
+.main-catalog-description{
+  box-sizing: inherit;
+  position: relative;
+  margin-bottom: 30px;
+  border-radius: 4px;
+  overflow: hidden;
+  transform: translate3d(0,0,0);
+}
+
+.image-container{
+  font-size: 14px;
+  line-height: 1.42857143;
+  box-sizing: inherit;
+  transform: translate3d(0,0,0);
+}
+.desc{font-size: 14px;
+  line-height: 1.42857143;
+  font-family: 'Optima',serif;
+  box-sizing: inherit;
+  position: absolute;
+  top: 0;
+  color: #fff;
+  width: 100%;
+  height: 100%;
+  padding: 0 20px 20px;
+  transform: translate3d(0,0,0);
+}
+
+.titlecat{
+  box-sizing: inherit;
+  margin: .67em 0;
+  font-family: inherit;
+  font-weight: 500;
+  line-height: 1.1;
+  color: inherit;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-size: 40px;
+  transform: translate3d(0,0,0);
+}
+
+
+.main-catalog{
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #333;
+  font-family: 'Optima',serif;
+  box-sizing: inherit;
+  transform: translate3d(0,0,0);
+}
+
+.container{
+  box-sizing: inherit;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  padding-right: 15px;
+  padding-left: 15px;
+  transform: translate3d(0,0,0);
+}
