--- a/src/app/products/candies/candies.component.html
+++ b/src/app/products/candies/candies.component.html
@@ -1,4 +1,21 @@
-<p>
-  user-detail works!
-  Current User ID: {{id}}
-</p>
+
+<h1 class="title-main">
+  <span>Candies
+  </span>
+</h1>
+
+<div class="row">
+  <div class="col-sm-6">
+    <div class="card" style="width: 18rem;">
+      <img class="card-img-top" src="..." alt="Card image cap">
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item"> <h5 class="card-title">Name cocklade</h5> </li>
+        <li class="list-group-item">by weight</li>
+        <li class="list-group-item">ID</li>
+      </ul>
+      <div class="card-body">
+        <a href="#" class="card-link">more</a>
+      </div>
+    </div>
+  </div>
+</div>
