--- a/src/app/main-container/main-container.component.html
+++ b/src/app/main-container/main-container.component.html
@@ -15,5 +15,11 @@
 
 
 
+<!--<div class="row row-cols-md-3 row-cols-md-3 g-4">-->
+<!--    <app-candies *ngFor="let productList of productList" [list]="productList" ></app-candies>-->
+<!--</div>-->
 
+<!--<a routerLink="list-page/add">-->
+<!--    <app-creat-products (newItemEvent)="addProduct($event)"> </app-creat-products>-->
+<!--</a>-->
 
