add services communication bw components

--- a/src/app/main-container/creat-products/creat-products.component.html
+++ b/src/app/main-container/creat-products/creat-products.component.html
@@ -45,7 +45,7 @@
       <span>Price: {{Price}}</span>
     </div>
 
-    <button type="submit" class="btn btn-primary" >Save</button>
+    <button (click)="addProduct()" type="submit" class="btn btn-primary" >Save</button>
   </form>
 
 </div>
