--- a/src/app/products/candies/candies.component.html
+++ b/src/app/products/candies/candies.component.html
@@ -6,17 +6,16 @@
 
 <div class="row">
 
-  <div class="col-sm-6">
-
-    <div class="card" style="width: 18rem;">
-      <img class="card-img-top" src="{{list.img}}" alt="Card image cap">
+  <div *ngFor="let product of productList" class="col-sm-6">
+    <div   class="card" style="width: 18rem;">
+      <img class="card-img-top" src="{{product.img}}" alt="Card image cap">
       <ul class="list-group list-group-flush">
-        <li class="list-group-item"> <h5 class="card-title">{{list.name}}</h5> </li>
-        <li class="list-group-item">{{list.byweightornot}}</li>
-        <li class="list-group-item">{{list.id}}</li>
+        <li class="list-group-item"> <h5 class="card-title">{{product.name}}</h5> </li>
+        <li class="list-group-item">{{product.byweightornot}}</li>
+        <li class="list-group-item">{{product.id | currency: "KZ"}} </li>
       </ul>
       <div class="card-body">
-        <a href="{{list.more}}" class="card-link">more</a>
+        <a href="{{product.more}}" class="card-link">more</a>
       </div>
     </div>
 
