--- a/src/app/main-container/created-products/created-products.component.html
+++ b/src/app/main-container/created-products/created-products.component.html
@@ -25,8 +25,8 @@
     <td>{{i.type}}</td>
     <td>{{i.typedict}}</td>
     <td>{{i.byweightornot}}</td>
-    <td [ngStyle]="{'color':getColor(i.Price)}">
-     {{i.Price}}
+    <td [ngStyle]="{'color':getColor(i.price)}">
+     {{i.price}}
     </td>
     <td>{{i.description}}</td>
     <td>{{i.img}}</td>
