--- a/src/app/products/candies/candies.component.html
+++ b/src/app/products/candies/candies.component.html
@@ -16,7 +16,7 @@
       <img class="card-img-top" src="{{product.img}}" alt="Card image cap">
       <ul class="list-group list-group-flush">
         <li class="list-group-item"> <h5 class="card-title">{{product.name}}</h5> </li>
-        <li class="list-group-item">{{product.price | currency: "US"}} </li>
+        <li class="list-group-item">{{product.price | converterCurrency: 'US' | currency: "US"}} </li>
         <li class="list-group-item">{{product.byweightornot}}</li>
         <li class="list-group-item">{{product.id}} </li>
       </ul>
@@ -25,7 +25,7 @@
 <!--        <button (click)="showMore(product.id)" >more</button>-->
       </div>
     </div>
-
+    <br>
   </div>
 
 </div>
