after adding Auth canActivate guard for admin page

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,7 +13,7 @@
 
 <div class="header-top-logo">
   <div class="logophoto">
-    <a routerLink="">
+    <a routerLink="home">
     <img src="https://www.rakhat.kz/app/themes/rahkat/assets/images/logo.png" alt="">
     </a>
   </div>
