--- a/src/app/main-container/creat-products/creat-products.component.html
+++ b/src/app/main-container/creat-products/creat-products.component.html
@@ -1,7 +1,7 @@
 <div>
   <h2>Create product: </h2>
 
-  <form (ngSubmit)="addingInfo()">
+  <form #form="ngForm" (ngSubmit)="addingInfo()">
     <div class="form-group">
       <label>Product Name: </label>
       <input name = "Name" [(ngModel)]="name" id="date" type="text" class="form-control"  aria-describedby="emailHelp" placeholder="Name" >
