after correct logging checking

--- a/src/app/main-container/creat-products/creat-products.component.html
+++ b/src/app/main-container/creat-products/creat-products.component.html
@@ -4,7 +4,7 @@
   <form #form="ngForm" (ngSubmit)="addingInfo()">
     <div class="form-group">
       <label>Product Name: </label>
-      <input name = "Name" [(ngModel)]="name" id="date" type="text" class="form-control"  aria-describedby="emailHelp" placeholder="Name" >
+      <input name = "Name" [(ngModel)]="name" id="date" type="text" class="form-control"  aria-describedby="emailHelp" placeholder="Name" (change)="checktouch2(name)">
       <span>Name is {{name}}</span>
     </div>
 
