--- a/src/app/main-container/created-products/created-products.component.html
+++ b/src/app/main-container/created-products/created-products.component.html
@@ -14,8 +14,8 @@
     <th scope="col">Price</th>
     <th scope="col">Description</th>
     <th scope="col">Img source</th>
-    <th scope="col">Options</th>
-    <th scope="col">More</th>
+<!--    <th scope="col">Options</th>-->
+<!--    <th scope="col">More</th>-->
   </tr>
   </thead>
   <tbody>
@@ -30,11 +30,12 @@
     </td>
     <td>{{i.description}}</td>
     <td>{{i.img}}</td>
-    <td>
-      <a>Edit </a>
-      <a>Delete</a>
-    </td>
-    <td> <a [routerLink]="['detail', i.id]">View details</a></td>
+<!--    <td>-->
+<!--      <a>Edit </a>-->
+<!--      <a>Delete</a>-->
+<!--    </td>-->
+<!--   // <td> <a [routerLink]="['detail', i.id]">View details</a>-->
+<!--  </td>-->
   </tr>
   </tbody>
 </table>
