--- a/src/app/products/chocolates/chocolates.component.html
+++ b/src/app/products/chocolates/chocolates.component.html
@@ -20,7 +20,7 @@
             <li class="list-group-item">№{{product.id}} </li>
           </ul>
           <div class="card-body">
-<!--           <a [routerLink]="['DetailChocolateComponent', product.id]" class="card-link">more</a>-->
+           <a [routerLink]="['DetailChocolateComponent', product.id]" class="card-link">more</a>
           </div>
         </div>
         <br>
