--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,3 @@
 <app-main-container></app-main-container>
 
+<!--<button (click)="logOut()" type="submit" class="btn btn-primary">log out</button>-->
